--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ div#galerie{
 }
 
 #calendar h3{
-  background:#ee3333;
+  background: #ff0; 
   border-radius:4px 4px 0 0;
   padding:20px;
   font-size:40%; /* Taille du titre du mois*/
@@ -277,21 +277,24 @@ h3{
   text-transform:uppercase;
   text-align:center;
   font-size:1.3em;
-  line-height:1.5em;
+  line-height: 10em;
   margin-top:4px;
 }
+
+/* Formulaire de contact */
+
 #formular {
-  background-color:#50cade;
-  padding:50px 50px 100px 50px;
-  width: 100px;   /* largeur du cadre du formulaire */
+  background-color: #ee3333;
+  padding: 5px;
+  width: 700px;   /* largeur du cadre du formulaire */
   margin:0 auto;
   margin-top:10px;
-  -webkit-border-radius: 15px; 
-     -moz-border-radius: 15px; 
-          border-radius: 15px;
-  -webkit-box-shadow: 0px 12px 15px #151515;
-     -moz-box-shadow: 0px 12px 15px #151515;
-          box-shadow: 0px 12px 15px #151515;
+  -webkit-border-radius: 5px; 
+     -moz-border-radius: 5px; 
+          border-radius: 5px;
+  -webkit-box-shadow: 5px;
+     -moz-box-shadow: 5px;
+          box-shadow: 5px;
 }
 
 .input {
@@ -301,8 +304,8 @@ h3{
   font-weight:lighter;
   color:red;
   background-color: #FFF;
-  width:50%;
-  padding: 15px 0px 15px 40px;
+  width:55%;
+  padding: 10px;
   margin-bottom: 20px;
   border: 3px solid #FFF;
   -webkit-box-sizing: border-box;
@@ -322,14 +325,16 @@ h3{
 }
 
 textarea {
-    width: 100%;
-    height: 150px;
-    line-height: 150%;
+    width: 10%;
+    height: 15px;
+    line-height: 15%;
     resize:vertical;
 }
 
-input:hover, textarea:hover,
-input:focus, textarea:focus {
+input:hover, 
+textarea:hover,
+input:focus, 
+textarea:focus {
 	background-color:white;
 }
 .name:before{
